// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test routes Routes - 404 Routes 1`] = `
Array [
  <div
    className="wrapper"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <h1
          className="h1"
        >
          FILMS
        </h1>
        <form
          action=""
          onSubmit={[Function]}
        >
          <input
            autoComplete="false"
            className="searchField"
            id="searchField"
            placeholder="search"
            tabIndex="0"
            type="search"
          />
          <input
            className="btnSearch"
            onClick={[Function]}
            type="button"
            value="⚲"
          />
        </form>
      </div>
    </header>
    <div
      className="container"
    >
      <div
        className="title"
      >
        <h1>
          Nothing found
        </h1>
      </div>
      <div
        className="moviesSelector"
      >
        <nav>
          <ul>
            <li>
              <a
                href="/list/trending"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Trending
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/top_rated"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Top Rated
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/coming_soon"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Coming Soon
                </button>
              </a>
            </li>
            <li>
              <select
                id=""
                name="genre"
                onChange={[Function]}
              >
                <option
                  value=""
                >
                  Select Genre
                </option>
                <option
                  value={28}
                >
                  Action
                </option>
                <option
                  value={12}
                >
                  Adventure
                </option>
                <option
                  value={16}
                >
                  Animation
                </option>
                <option
                  value={35}
                >
                  Comedy
                </option>
                <option
                  value={80}
                >
                  Crime
                </option>
                <option
                  value={99}
                >
                  Documentary
                </option>
                <option
                  value={18}
                >
                  Drama
                </option>
                <option
                  value={10751}
                >
                  Family
                </option>
                <option
                  value={14}
                >
                  Fantasy
                </option>
                <option
                  value={36}
                >
                  History
                </option>
                <option
                  value={27}
                >
                  Horror
                </option>
                <option
                  value={10402}
                >
                  Music
                </option>
                <option
                  value={9648}
                >
                  Mystery
                </option>
                <option
                  value={10749}
                >
                  Romance
                </option>
                <option
                  value={878}
                >
                  Science Fiction
                </option>
                <option
                  value={10770}
                >
                  TV Movie
                </option>
                <option
                  value={53}
                >
                  Thriller
                </option>
                <option
                  value={10752}
                >
                  War
                </option>
                <option
                  value={37}
                >
                  Western
                </option>
              </select>
            </li>
          </ul>
        </nav>
        <div
          className="typeView"
        >
          <button
            id="cards"
            onClick={[Function]}
            type="button"
          >
            ⚏
          </button>
          <button
            id="lines"
            onClick={[Function]}
            type="button"
          >
            ⚌
          </button>
        </div>
      </div>
      <div
        className="imgWrapper"
      >
        <img
          alt="404 Not Found"
          src="https://www.ge.com/digital/sites/default/files/styles/featured_desktop_2432w_x_1368h/public/2018-09/404.png?itok=hZD2E0Up"
        />
      </div>
    </div>
    <footer>
      <div
        className="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>,
  ",",
]
`;

exports[`Test routes Routes - base Routes 1`] = `
<div>
  <header
    className="header"
  >
    <div
      className="container"
    >
      <h1
        className="h1"
      >
        FILMS
      </h1>
      <form
        action=""
        onSubmit={[Function]}
      >
        <input
          autoComplete="false"
          className="searchField"
          id="searchField"
          placeholder="search"
          tabIndex="0"
          type="search"
        />
        <input
          className="btnSearch"
          onClick={[Function]}
          type="button"
          value="⚲"
        />
      </form>
    </div>
  </header>
  <main>
    <section
      className="movieList"
    >
      <div
        className="container"
      >
        <div
          className="moviesSelector"
        >
          <nav>
            <ul>
              <li>
                <a
                  href="/list/trending"
                  onClick={[Function]}
                >
                  <button
                    href="#"
                    type="button"
                  >
                    Trending
                  </button>
                </a>
              </li>
              <li>
                <a
                  href="/list/top_rated"
                  onClick={[Function]}
                >
                  <button
                    href="#"
                    type="button"
                  >
                    Top Rated
                  </button>
                </a>
              </li>
              <li>
                <a
                  href="/list/coming_soon"
                  onClick={[Function]}
                >
                  <button
                    href="#"
                    type="button"
                  >
                    Coming Soon
                  </button>
                </a>
              </li>
              <li>
                <select
                  id=""
                  name="genre"
                  onChange={[Function]}
                >
                  <option
                    value=""
                  >
                    Select Genre
                  </option>
                  <option
                    value={28}
                  >
                    Action
                  </option>
                  <option
                    value={12}
                  >
                    Adventure
                  </option>
                  <option
                    value={16}
                  >
                    Animation
                  </option>
                  <option
                    value={35}
                  >
                    Comedy
                  </option>
                  <option
                    value={80}
                  >
                    Crime
                  </option>
                  <option
                    value={99}
                  >
                    Documentary
                  </option>
                  <option
                    value={18}
                  >
                    Drama
                  </option>
                  <option
                    value={10751}
                  >
                    Family
                  </option>
                  <option
                    value={14}
                  >
                    Fantasy
                  </option>
                  <option
                    value={36}
                  >
                    History
                  </option>
                  <option
                    value={27}
                  >
                    Horror
                  </option>
                  <option
                    value={10402}
                  >
                    Music
                  </option>
                  <option
                    value={9648}
                  >
                    Mystery
                  </option>
                  <option
                    value={10749}
                  >
                    Romance
                  </option>
                  <option
                    value={878}
                  >
                    Science Fiction
                  </option>
                  <option
                    value={10770}
                  >
                    TV Movie
                  </option>
                  <option
                    value={53}
                  >
                    Thriller
                  </option>
                  <option
                    value={10752}
                  >
                    War
                  </option>
                  <option
                    value={37}
                  >
                    Western
                  </option>
                </select>
              </li>
            </ul>
          </nav>
          <div
            className="typeView"
          >
            <button
              id="cards"
              onClick={[Function]}
              type="button"
            >
              ⚏
            </button>
            <button
              id="lines"
              onClick={[Function]}
              type="button"
            >
              ⚌
            </button>
          </div>
        </div>
        <div
          className="moviesWrapper"
        >
          <article
            className="movieContainer cards"
            onMouseLeave={[Function]}
          >
            <figure
              className="figcaptionBlock"
            >
              <div>
                <img
                  alt="Aladdin"
                  src="https://image.tmdb.org/t/p/w300/3iYQTLGoy7QnjcUYRJy4YrAgGvp.jpg"
                />
              </div>
              <figcaption>
                <div
                  className="movieTitle"
                >
                  <button
                    href="#"
                    onKeyDown={[Function]}
                    tabIndex="0"
                    type="button"
                  >
                    <a
                      href="/films/333333"
                      id={333333}
                      onClick={[Function]}
                    >
                      Aladdin
                    </a>
                  </button>
                  <span>
                    7.2
                  </span>
                </div>
                <div
                  className="movieGenres"
                >
                  <ul>
                    <li>
                      <button
                        onClick={[Function]}
                        onKeyDown={[Function]}
                        type="button"
                        value={12}
                      >
                        Adventure
                      </button>
                    </li>
                  </ul>
                </div>
              </figcaption>
            </figure>
            <div
              className="hoverMovie"
            >
              <div
                className="hoverControlBlock"
              >
                <label
                  htmlFor="playTrailer"
                  id={333333}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <input
                    className="playTrailer"
                    id={333333}
                    name="playTrailer"
                    type="button"
                  />
                  Watch Now
                </label>
                <button
                  className="showOverwie"
                  id="showOverwie"
                  onClick={[Function]}
                  type="button"
                >
                  View Info
                </button>
              </div>
              <div
                className="hoverOverwie hoverOverwieNone"
              >
                <button
                  className="hoverClose"
                  id="closeHover"
                  onClick={[Function]}
                  type="button"
                >
                  ╳
                </button>
                <div
                  className="hoverOverwieTitle"
                >
                  <div
                    className="hoverOverwieTitleItem"
                  >
                    <h3>
                      Aladdin
                    </h3>
                    <ul>
                      <li>
                        <button
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          type="button"
                          value={12}
                        >
                          Adventure
                        </button>
                      </li>
                    </ul>
                  </div>
                  <div
                    className="hoverOverwieTitleItem"
                  >
                    <p>
                      7.2
                    </p>
                  </div>
                </div>
                <p>
                  A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.
                </p>
                <button
                  id={333333}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  type="button"
                >
                  Watch Now
                </button>
              </div>
            </div>
          </article>
          <div
            className="container"
          >
            <img
              alt="loading"
              src="test-file-stub"
            />
          </div>
        </div>
      </div>
    </section>
  </main>
  <footer>
    <div
      className="container"
    >
      <h2>
        FILMS
      </h2>
      <p>
        Copyright © 2019 FILMS. RAMAN BYCHKOU
      </p>
    </div>
  </footer>
</div>
`;

exports[`Test routes Routes - films Routes 1`] = `
Array [
  <div
    className="wrapper"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <h1
          className="h1"
        >
          FILMS
        </h1>
        <form
          action=""
          onSubmit={[Function]}
        >
          <input
            autoComplete="false"
            className="searchField"
            id="searchField"
            placeholder="search"
            tabIndex="0"
            type="search"
          />
          <input
            className="btnSearch"
            onClick={[Function]}
            type="button"
            value="⚲"
          />
        </form>
      </div>
    </header>
    <div
      className="container"
    >
      <div
        className="title"
      >
        <h1>
          Nothing found
        </h1>
      </div>
      <div
        className="moviesSelector"
      >
        <nav>
          <ul>
            <li>
              <a
                href="/list/trending"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Trending
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/top_rated"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Top Rated
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/coming_soon"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Coming Soon
                </button>
              </a>
            </li>
            <li>
              <select
                id=""
                name="genre"
                onChange={[Function]}
              >
                <option
                  value=""
                >
                  Select Genre
                </option>
                <option
                  value={28}
                >
                  Action
                </option>
                <option
                  value={12}
                >
                  Adventure
                </option>
                <option
                  value={16}
                >
                  Animation
                </option>
                <option
                  value={35}
                >
                  Comedy
                </option>
                <option
                  value={80}
                >
                  Crime
                </option>
                <option
                  value={99}
                >
                  Documentary
                </option>
                <option
                  value={18}
                >
                  Drama
                </option>
                <option
                  value={10751}
                >
                  Family
                </option>
                <option
                  value={14}
                >
                  Fantasy
                </option>
                <option
                  value={36}
                >
                  History
                </option>
                <option
                  value={27}
                >
                  Horror
                </option>
                <option
                  value={10402}
                >
                  Music
                </option>
                <option
                  value={9648}
                >
                  Mystery
                </option>
                <option
                  value={10749}
                >
                  Romance
                </option>
                <option
                  value={878}
                >
                  Science Fiction
                </option>
                <option
                  value={10770}
                >
                  TV Movie
                </option>
                <option
                  value={53}
                >
                  Thriller
                </option>
                <option
                  value={10752}
                >
                  War
                </option>
                <option
                  value={37}
                >
                  Western
                </option>
              </select>
            </li>
          </ul>
        </nav>
        <div
          className="typeView"
        >
          <button
            id="cards"
            onClick={[Function]}
            type="button"
          >
            ⚏
          </button>
          <button
            id="lines"
            onClick={[Function]}
            type="button"
          >
            ⚌
          </button>
        </div>
      </div>
      <div
        className="imgWrapper"
      >
        <img
          alt="404 Not Found"
          src="https://www.ge.com/digital/sites/default/files/styles/featured_desktop_2432w_x_1368h/public/2018-09/404.png?itok=hZD2E0Up"
        />
      </div>
    </div>
    <footer>
      <div
        className="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>,
  ",",
]
`;

exports[`Test routes Routes - genre Routes 1`] = `
Array [
  <div
    className="wrapper"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <h1
          className="h1"
        >
          FILMS
        </h1>
        <form
          action=""
          onSubmit={[Function]}
        >
          <input
            autoComplete="false"
            className="searchField"
            id="searchField"
            placeholder="search"
            tabIndex="0"
            type="search"
          />
          <input
            className="btnSearch"
            onClick={[Function]}
            type="button"
            value="⚲"
          />
        </form>
      </div>
    </header>
    <div
      className="container"
    >
      <div
        className="title"
      >
        <h1>
          Nothing found
        </h1>
      </div>
      <div
        className="moviesSelector"
      >
        <nav>
          <ul>
            <li>
              <a
                href="/list/trending"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Trending
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/top_rated"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Top Rated
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/coming_soon"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Coming Soon
                </button>
              </a>
            </li>
            <li>
              <select
                id=""
                name="genre"
                onChange={[Function]}
              >
                <option
                  value=""
                >
                  Select Genre
                </option>
                <option
                  value={28}
                >
                  Action
                </option>
                <option
                  value={12}
                >
                  Adventure
                </option>
                <option
                  value={16}
                >
                  Animation
                </option>
                <option
                  value={35}
                >
                  Comedy
                </option>
                <option
                  value={80}
                >
                  Crime
                </option>
                <option
                  value={99}
                >
                  Documentary
                </option>
                <option
                  value={18}
                >
                  Drama
                </option>
                <option
                  value={10751}
                >
                  Family
                </option>
                <option
                  value={14}
                >
                  Fantasy
                </option>
                <option
                  value={36}
                >
                  History
                </option>
                <option
                  value={27}
                >
                  Horror
                </option>
                <option
                  value={10402}
                >
                  Music
                </option>
                <option
                  value={9648}
                >
                  Mystery
                </option>
                <option
                  value={10749}
                >
                  Romance
                </option>
                <option
                  value={878}
                >
                  Science Fiction
                </option>
                <option
                  value={10770}
                >
                  TV Movie
                </option>
                <option
                  value={53}
                >
                  Thriller
                </option>
                <option
                  value={10752}
                >
                  War
                </option>
                <option
                  value={37}
                >
                  Western
                </option>
              </select>
            </li>
          </ul>
        </nav>
        <div
          className="typeView"
        >
          <button
            id="cards"
            onClick={[Function]}
            type="button"
          >
            ⚏
          </button>
          <button
            id="lines"
            onClick={[Function]}
            type="button"
          >
            ⚌
          </button>
        </div>
      </div>
      <div
        className="imgWrapper"
      >
        <img
          alt="404 Not Found"
          src="https://www.ge.com/digital/sites/default/files/styles/featured_desktop_2432w_x_1368h/public/2018-09/404.png?itok=hZD2E0Up"
        />
      </div>
    </div>
    <footer>
      <div
        className="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>,
  ",",
]
`;

exports[`Test routes Routes - index.html Routes 1`] = `","`;

exports[`Test routes Routes - list Routes 1`] = `
Array [
  <div
    className="wrapper"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <h1
          className="h1"
        >
          FILMS
        </h1>
        <form
          action=""
          onSubmit={[Function]}
        >
          <input
            autoComplete="false"
            className="searchField"
            id="searchField"
            placeholder="search"
            tabIndex="0"
            type="search"
          />
          <input
            className="btnSearch"
            onClick={[Function]}
            type="button"
            value="⚲"
          />
        </form>
      </div>
    </header>
    <div
      className="container"
    >
      <div
        className="title"
      >
        <h1>
          Nothing found
        </h1>
      </div>
      <div
        className="moviesSelector"
      >
        <nav>
          <ul>
            <li>
              <a
                href="/list/trending"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Trending
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/top_rated"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Top Rated
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/coming_soon"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Coming Soon
                </button>
              </a>
            </li>
            <li>
              <select
                id=""
                name="genre"
                onChange={[Function]}
              >
                <option
                  value=""
                >
                  Select Genre
                </option>
                <option
                  value={28}
                >
                  Action
                </option>
                <option
                  value={12}
                >
                  Adventure
                </option>
                <option
                  value={16}
                >
                  Animation
                </option>
                <option
                  value={35}
                >
                  Comedy
                </option>
                <option
                  value={80}
                >
                  Crime
                </option>
                <option
                  value={99}
                >
                  Documentary
                </option>
                <option
                  value={18}
                >
                  Drama
                </option>
                <option
                  value={10751}
                >
                  Family
                </option>
                <option
                  value={14}
                >
                  Fantasy
                </option>
                <option
                  value={36}
                >
                  History
                </option>
                <option
                  value={27}
                >
                  Horror
                </option>
                <option
                  value={10402}
                >
                  Music
                </option>
                <option
                  value={9648}
                >
                  Mystery
                </option>
                <option
                  value={10749}
                >
                  Romance
                </option>
                <option
                  value={878}
                >
                  Science Fiction
                </option>
                <option
                  value={10770}
                >
                  TV Movie
                </option>
                <option
                  value={53}
                >
                  Thriller
                </option>
                <option
                  value={10752}
                >
                  War
                </option>
                <option
                  value={37}
                >
                  Western
                </option>
              </select>
            </li>
          </ul>
        </nav>
        <div
          className="typeView"
        >
          <button
            id="cards"
            onClick={[Function]}
            type="button"
          >
            ⚏
          </button>
          <button
            id="lines"
            onClick={[Function]}
            type="button"
          >
            ⚌
          </button>
        </div>
      </div>
      <div
        className="imgWrapper"
      >
        <img
          alt="404 Not Found"
          src="https://www.ge.com/digital/sites/default/files/styles/featured_desktop_2432w_x_1368h/public/2018-09/404.png?itok=hZD2E0Up"
        />
      </div>
    </div>
    <footer>
      <div
        className="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>,
  ",",
]
`;

exports[`Test routes Routes - search Routes 1`] = `
Array [
  <div
    className="wrapper"
  >
    <header
      className="header"
    >
      <div
        className="container"
      >
        <h1
          className="h1"
        >
          FILMS
        </h1>
        <form
          action=""
          onSubmit={[Function]}
        >
          <input
            autoComplete="false"
            className="searchField"
            id="searchField"
            placeholder="search"
            tabIndex="0"
            type="search"
          />
          <input
            className="btnSearch"
            onClick={[Function]}
            type="button"
            value="⚲"
          />
        </form>
      </div>
    </header>
    <div
      className="container"
    >
      <div
        className="title"
      >
        <h1>
          Nothing found
        </h1>
      </div>
      <div
        className="moviesSelector"
      >
        <nav>
          <ul>
            <li>
              <a
                href="/list/trending"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Trending
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/top_rated"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Top Rated
                </button>
              </a>
            </li>
            <li>
              <a
                href="/list/coming_soon"
                onClick={[Function]}
              >
                <button
                  href="#"
                  type="button"
                >
                  Coming Soon
                </button>
              </a>
            </li>
            <li>
              <select
                id=""
                name="genre"
                onChange={[Function]}
              >
                <option
                  value=""
                >
                  Select Genre
                </option>
                <option
                  value={28}
                >
                  Action
                </option>
                <option
                  value={12}
                >
                  Adventure
                </option>
                <option
                  value={16}
                >
                  Animation
                </option>
                <option
                  value={35}
                >
                  Comedy
                </option>
                <option
                  value={80}
                >
                  Crime
                </option>
                <option
                  value={99}
                >
                  Documentary
                </option>
                <option
                  value={18}
                >
                  Drama
                </option>
                <option
                  value={10751}
                >
                  Family
                </option>
                <option
                  value={14}
                >
                  Fantasy
                </option>
                <option
                  value={36}
                >
                  History
                </option>
                <option
                  value={27}
                >
                  Horror
                </option>
                <option
                  value={10402}
                >
                  Music
                </option>
                <option
                  value={9648}
                >
                  Mystery
                </option>
                <option
                  value={10749}
                >
                  Romance
                </option>
                <option
                  value={878}
                >
                  Science Fiction
                </option>
                <option
                  value={10770}
                >
                  TV Movie
                </option>
                <option
                  value={53}
                >
                  Thriller
                </option>
                <option
                  value={10752}
                >
                  War
                </option>
                <option
                  value={37}
                >
                  Western
                </option>
              </select>
            </li>
          </ul>
        </nav>
        <div
          className="typeView"
        >
          <button
            id="cards"
            onClick={[Function]}
            type="button"
          >
            ⚏
          </button>
          <button
            id="lines"
            onClick={[Function]}
            type="button"
          >
            ⚌
          </button>
        </div>
      </div>
      <div
        className="imgWrapper"
      >
        <img
          alt="404 Not Found"
          src="https://www.ge.com/digital/sites/default/files/styles/featured_desktop_2432w_x_1368h/public/2018-09/404.png?itok=hZD2E0Up"
        />
      </div>
    </div>
    <footer>
      <div
        className="container"
      >
        <h2>
          FILMS
        </h2>
        <p>
          Copyright © 2019 FILMS. RAMAN BYCHKOU
        </p>
      </div>
    </footer>
  </div>,
  ",",
]
`;
